@@ -121,7 +121,7 @@ public:
   void getUnfreshSlaveInfos(vector<DomainInfo>* domains);
   void getUpdatedMasters(vector<DomainInfo>* domains);
   bool getDomainInfo(const string &domain, DomainInfo &di);
-  void rediscover();
+  void rediscover(string* status=0);
   void reload();
 private:
   DNSResourceRecord lastrr;
